--- a/main.html
+++ b/main.html
@@ -15,5 +15,9 @@
       <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present
       in 3 days git/github workshop.
     </h1>
+    <h1>
+      <a href="https://github.com/sparshni">Sparsh Nidhi</a> was present
+      in 3 days git/github workshop.
+    </h1>
   </body>
 </html>
