Added  link to my profile - Saurav Khanal

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script src="index.js"></script>
 
     <h1>
-      <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present
+      <a href="https://github.com/sauravkhanal">Saurav Khanal</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
