--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
   <body>
     <script src="index.js"></script>
 
-    <h1>
-      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+    <h1><br><br><center>
+      <a href="https://github.com/saksham-17">Saksham Bhattarai</a> was present
       in 3 days git/github workshop.
-    </h1>
+    </h1></center>
   </body>
 </html>
