--- a/main.html
+++ b/main.html
@@ -12,7 +12,11 @@
     <script src="index.js"></script>
 
     <h1>
-      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was
+      present in 3 days git/github workshop.
+    </h1>
+    <h1>
+      <a href="https://github.com/sameermdr11">Sameer Manandhar</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
