Name changed, added link of github profile and some css code added

--- a/main.html
+++ b/main.html
@@ -9,11 +9,10 @@
   </head>
 
   <body>
-    <script src="index.js"></script>
-
     <h1>
-      <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present
+      <span class="name"><a href="https://github.com/cart00n01">Sanskar Silwal</a> </span> was present
       in 3 days git/github workshop.
     </h1>
+    <h2>We all got a chance to learn lot from this workshop.</h2>
   </body>
 </html>
