--- a/main.html
+++ b/main.html
@@ -15,5 +15,11 @@
       <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
       in 3 days git/github workshop.
     </h1>
+
+    <h1>
+      <a href="https://github.com/C0LDx">Riden Shankhadev</a> was present
+      in 3 days git/github workshop.
+    </h1>
+
   </body>
 </html>
