--- a/main.html
+++ b/main.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>myName</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <script src="index.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>myName</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <h1>
-      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
-      in 3 days git/github workshop.
-    </h1>
-  </body>
+<body>
+  <script src="index.js"></script>
+
+  <h1>
+    <a href="https://github.com/sadichhyaa">Sadichhya Maharjan</a> was present
+    in 3 days git/github workshop.
+  </h1>
+</body>
+
 </html>
