--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <script src="index.js"></script>
+    
 
     <h1>
-      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+      <a href="https://github.com/Sauravkhakurel12">Saurav khakurel</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
