--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
     <h1>
       <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
       in 3 days git/github workshop.
+      <a href="https://github.com/PrabeshShrestha-Xenserv">Prabesh Shrestha</a> was present
+      in 3 days git/github workshop.
     </h1>
   </body>
 </html>
