--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,6 +13,10 @@
 
     <h1>
       <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+      in 3 days git/github workshop.
+    </h1>
+    <h1>
+      <a href="https://github.com/tuladhar07">Nhujaw Tuladhar</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
