--- a/main.html
+++ b/main.html
@@ -13,6 +13,10 @@
     <script src="index.js"></script>
 
     <h1>
+        <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present in 3 days git/github workshop.
+    </h1>
+
+    <h1>
         <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present in 3 days git/github workshop.
     </h1>
 
