--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
       in 3 days git/github workshop.
     </h1>
     <h1>
-      <a href="https://github.com/raish7">Raish Manadhar</a> was present
+      <a href="https://github.com/raish7">Raish Manandhar</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
