--- a/main.html
+++ b/main.html
@@ -24,6 +24,8 @@
     </style>
     <script src="index.js"></script>
     <p>
+		<a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+      in 3 days git/github workshop.
       <h1>
         <a href="https://github.com/Scribblingcheese">Shushrusha Maharjan</a> was present
         in 3 days git/github workshop.
