--- a/main.html
+++ b/main.html
@@ -23,6 +23,14 @@
     <h1>
         <a href="https://github.com/SujanSapkota07">Sujan Sapkota</a> was present in 3 days git/github workshop.
     </h1>
+
+    <h1>
+        <a href="https://github.com/FleakBeak/python">Abinash Nath Pandey</a> was present in 3 days git/github workshop.
+    </h1
+
+    <h1>
+        <a href="https://github.com/samiadhikari">Samikshya Adhikari</a> was present in 3 days git/github workshop.
+    </h1>
 </body>
 
 </html>
