--- a/main.html
+++ b/main.html
@@ -12,8 +12,13 @@
     <script src="index.js"></script>
 
     <h1>
-      <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present
-      in 3 days git/github workshop.
+         <a href="https://github.com/whatiskeptiname">Susan Ghimire</a> was present
+         in 3 days git/github workshop.
+    </h1>
+    
+    <h1>
+         <a href="https://github.com/Bpinn">Bipin Ghimire</a> was present
+         in 3 days git/github workshop. 
     </h1>
   </body>
 </html>
