--- a/main.html
+++ b/main.html
@@ -57,6 +57,7 @@ git <!DOCTYPE html>
       <a href="https://github.com/PrabeshShrestha-Xenserv">Prabesh Shrestha</a> was present
       in 3 days git/github workshop.
     </h1>
+     <h1><a href="https://github.com/e-uphoria">Nush Ojha</a> was present in 3 days git/github workshop.</h1>
 
   </body>
 </html>
