--- a/main.html
+++ b/main.html
@@ -56,7 +56,10 @@ git <!DOCTYPE html>
       in 3 days git/github workshop.
       <a href="https://github.com/PrabeshShrestha-Xenserv">Prabesh Shrestha</a> was present
       in 3 days git/github workshop.
-    </h1>
+ </h1>
+<h1>
+<a href="https://github.com/jessiejessic"> Jessica Dangol </a> was present in 3 days git/github workshop.
+</h1>
 
   </body>
 </html>
