Added github link

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script src="index.js"></script>
 
     <h1>
-      <a href="https://github.com/AnkitShrestha-Xenserv">Ankit Shrestha</a> was present
+      <a href="https://github.com/swostika123">Swostika Pokharel</a> was present
       in 3 days git/github workshop.
     </h1>
   </body>
