--- a/main.html
+++ b/main.html
@@ -69,6 +69,8 @@
         <h1><a href="https://github.com/lordmomo">Sashank Shrestha</a> was present in 3 days git/github workshop.</h1>
       
         <h1><a href="https://github.com/Sujit-11">Sujit Kumar Shrestha</a> was present in 3 days git/github workshop.</h1>
+
+	<h1><a href="https://github.com/Zawre-mi">Rinal Paudyal</a> was present in 3 days git/github workshop.</h1>
         
     </body>
 </html>
