--- a/main.html
+++ b/main.html
@@ -9,11 +9,9 @@
   </head>
 
   <body>
-    <script src="index.js"></script>
+   
 
-    <h1>
-      <a href="https://github.com/yubraaj11">Yubraj Sigdel</a> as a moderator was present
-      in 3 days git/github workshop.
+    <h1><a href="https://github.com/yubraaj11">Yubraj Sigdel</a> as a moderator was presentin 3 days git/github workshop.
     </h1>
   </body>
 </html>
