--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <h1><a href="https://github.com/PrasannaSpk17/myName">Prasanna Sapkota</a>Did the deed.</h1>
         <h1><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click</a> check my new feature</h1>
-        <h1><a href="https://github.com/PrasannaSpk17/myName">Prasanna Sapkota</a> goto my github profile </h1>
+        <h1><a href="https://github.com/PrasannaSpk17">Prasanna Sapkota</a> goto my github profile </h1>
         
     </body>
 </html>
